package de.adesso.adessoseminarmanagement.applicationservice.repository;

public interface PersonRepository {
}
